# mixed-python-rust-ground-truth

./: .clippy.toml  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  deny.toml  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml
src/: lib.rs
src/ground_truth/: __init__.py  data_pipeline.py  similarity.py
tests/: test_pipeline.py  test_similarity.py
