[project]
name = "ground-truth-ml"
version = "0.1.0"
description = "Mixed Python+Rust ground truth corpus for PMAT"
requires-python = ">=3.11"
license = "MIT"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
